[package]
authors = ["luamoroso"]
edition = "2018"
name = "simple-server"
version = "0.1.0"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
clap = "2.33.3"
env_logger = "0.8.3"
log = "0.4.0"
log4rs = "1.0.0"
prost = "0.7.0"
tokio = {version = "1.2.0", features = ["full"]}
tonic = "0.4.0"

[build-dependencies]
tonic-build = "0.4.0"
